Add new main card section

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <section class="cia-warning">
       <img class="cia-warning__cia-logo" src="./assets/cia-warning.png">
       <text class="cia-warning__disclaimer">ACCESS GRANTED</text>
-      <text class="cia-warning__disclaimer">Welcome, special agent YOU YOURSELF
+      <text class="cia-warning__disclaimer">Welcome, special agent Yu Yorselve
       <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an intricate and mesmerizing website (id="BU-77") due to its apparent link with a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon BU-77's seizure, WEBSAF agents reported that it had been masquerading as a harmless web application, providing its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". As such, you will find two "game modes" available to "play" on the main page. One of these appears to be harmless while the other...well, you'll see.</text>
-      <text class="cia-warning__disclaimer">Thankfully, BU-77 itself is now quarantined within our own secure, internal CIA servers. According to the WEBSAF official report, it was:</text>
-      <text class="cia-warning__disclaimer">"...purely by happenstance that our agents were attempting to seize control of BU-77 at the exact moment that special agent REDACTED (in an unrelated incident) threw thier REDACTED REDACTED REDACTED off the roof of building REDACTED. A large number of horrified staff had quickly gathered around the REDACTED REDACTED as the halucinating agent began to REDACTED REDACTED SUUUUUUPER-REDACTED with the REDACTED miniatures. Naturally, it was at this point that the onlookers began warming up to the idea, and agency-wide participation led to the most brutal DEH-HEH-HEFINTELY-REDACTED in recorded history. The fevered, trance-like state exhibited by so many that day led the participants to happily REDACTED all over the REDACTED REDACTED with their own SUPER-OMEGA-REDACTED, leading directly to the succesful seizure of BU-77."</text>
+      <text class="cia-warning__disclaimer">Thankfully, BU-77 itself is now quarantined within our own secure, internal CIA servers. According to the WEBSAF official report:</text>
+      <text class="cia-warning__disclaimer">"...successful seizure was achieved purely by happenstance...our agents had been attempting seizure of BU-77 at the precise moment that special agent REDACTED (in an unrelated incident) had thrown thier REDACTED REDACTED REDACTED off the roof of building REDACTED. As we later learned, a large number of horrified staff had quickly gathered around the REDACTED REDACTED as the halucinating agent began to REDACTED REDACTED SUUUUUUPER-REDACTED with the REDACTED miniatures. Naturally, it was at this point that the onlookers began warming up to the idea, and agency-wide participation led to the most brutal DEH-HEH-HEFINTELY-REDACTED in recorded history. The fevered, trance-like state (exhibited by so many that day) led the participants to happily REDACTED all over the REDACTED REDACTED with their own SUPER-OMEGA-REDACTED, leading directly to the succesful seizure of BU-77."</text>
       <text class="cia-warning__disclaimer">(AUTHOR'S NOTE: some insist it's inconceivable that WEBSAF never thought to try containing BU-77 in the aforementioned manner, while others argue that hindsight is 20-20; but I digress)</text>
       <text class="cia-warning__disclaimer">The descision was made to keep BU-77 "live" (though partitioned off from public access) in the hopes that clues may someday be gleaned from the data it regularly attempts to send out into the ether. All attempts at tracing said data have failed, however, as it travels by unknown means.</text>
-      <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing BU-77; only those who have achieved complete mastery over their own impulses/instincts may do so. Do not let the unpoilshed, even childish look of BU-77 cause you to let your guard down. We have strong evidence that its appearance was an intentional "feature", if you will, being designed to lull its victims into a false sense of security (perhaps to make them easier targets for abduction). The true danger of BU-77 lies hidden behind its silly facade, within the actual code. Top programmers from all over the world have been secretly transported to the facility housing it, yet none have been able to decipher how BU-77 works. One programming savant, in particular, had to be tranquilzed by on-site staff after he began thrashing violently around on the floor, screaming "It's genius, it's genius! The code...it's brilliant! We're all doomed!". Upon coming back to consciousness several hours later, he claimed no local memory of the event. Our own analysts have deemed the code to be "far too advanced for the current limits of human understanding". In fact, even after all these years, there is only one thing we know for sure about BU-77; it was most definitely NOT created by ALIENS.</text>
+      <text class="cia-warning__disclaimer">Extreme caution and great mental fortitude are both required when accessing BU-77; only those who have achieved complete mastery over their own impulses/instincts may do so. Do not let the unpoilshed, even childish look of BU-77 cause you to let your guard down. We have strong evidence that its appearance was an intentional "feature", if you will, being designed to lull its victims into a false sense of security (perhaps to make them easier targets for abduction). The true danger of BU-77 lies hidden behind its silly facade, within the actual code. Top programmers from all over the world have been secretly transported to the facility housing it, yet none have been able to decipher how BU-77 works. One programming savant, in particular, had to be tranquilzed by on-site staff after he began thrashing violently around on the floor, screaming "It's genius, it's genius! The code...it's brilliant! We're all doomed!". Upon coming back to consciousness several hours later, he claimed no local memory of the event. Our own analysts have deemed the code to be "far too advanced for the current limits of human understanding". Indeed, even after all these years of intensive study, there is but one thing we know for sure about BU-77: it was most definitely NOT created by ALIENS.</text>
       <text class="cia-warning__disclaimer">You may now proceed to the website via the link provided below. And, agent? If you choose to continue down this dreadful road, you're on your own; consider yourself warned, you brave fool.</text>
-      <text class="cia-warning__disclaimer">It was truly an honor serving with you. Methodalis functionalis, and...good luck.</text>
+      <text class="cia-warning__disclaimer">It was truly an honor serving with you, agent Yorselve. Methodalis functionalis, and...... good luck.</text>
       <button class="cia-warning__proceed-button">PROCEED?</button>
     </section>
     <div class="top-border hidden">
@@ -29,7 +29,9 @@
       <img class="top-border__secret-alien-image-two" src="./assets/disguise.png">
       <text class="top-border__secret-alien-name">NOT SEEKRIT ALEIN</text>
       <text class="top-border__secret-alien-win-count">WiNS: 0</text>
-      <button class="top-border__change-mode-back hidden">NO LIK FARE! GO BAK NOW! CLIK HEER NOW!</button>
+      <button class="top-border__change-mode-back hidden">NO LIK FARE GAYM! GO BAK NOW! CLIK HEER NOW!</button>
+      <text class="stop-that hidden">WUT DID</text>
+      <text class="stop-that-two hidden">U DOO ?!!?</text>
     </div>
     <section class="game-board hidden">
       <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png">
@@ -91,10 +93,20 @@
         <img class="game-board-difficult__rock-button" src="./assets/rock.png">
         <img class="game-board-difficult__paper-button" src="./assets/paypear.png">
         <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
+        <img class="game-board-difficult__rock-button-two hidden" src="./assets/rock.png">
+        <img class="game-board-difficult__paper-button-two hidden" src="./assets/paypear.png">
+        <img class="game-board-difficult__scissors-button-two hidden" src="./assets/scissors-romero.png">
         <img class="game-board-difficult__wimpy-alien-button not-allowed" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
         <img class="game-board-difficult__alien-button not-allowed" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
         <img class="game-board-difficult__bigger-alien-button not-allowed" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
         <text class="game-board-difficult__no-touchy not-allowed hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
+      </div>
+      <div class="help hidden">
+        <text class="helpful-message-one hidden">agent yu ...</text>
+        <text class="helpful-message-two hidden">... the "alein" will always win and there's no way to exit this game mode ... so i would say to stop playing but i know you better than that ...</text>
+        <text class="helpful-message-three hidden">... you've always been so hard-headed ... but at least let me give you a fighting chance ...</text>
+        <text class="helpful-message-four hidden">... look for a button to make the game fair ... i'll have it ready for you soon ...</text>
+        <text class="helpful-message-five hidden">... keep playing for now, buy me some time ... i really think we can finally crack this thing ... just hang in there, and keep your eyes peeled ...</text>
       </div>
       <div class="hidden" id="difficultWinnerCard">
         <text class="winner-card-difficult__outcome-is">AND TEH WINNR IZ --</text>
@@ -110,6 +122,7 @@
         <img class="game-board-fair__wimpy-alien-button" src="./assets/wimpy-alien.png">
         <img class="game-board-fair__alien-button" src="./assets/alien.png">
         <img class="game-board-fair__bigger-alien-button" src="./assets/bigger-alien.png">
+        <img class="game-board-fair__secret-alien-button" src="./assets/secret-alien.png">
       </div>
       <div class="hidden" id="fairWinnerCard">
         <text class="winner-card-fair__outcome-is">AND TEH WINNR IZ --</text>
@@ -117,12 +130,38 @@
         </div>
       </div>
     </section>
+    <section class="game-board-two hidden">
+      <div class="difficult-card__deco-button">
+        <div class="difficult-card__deco-button-one-alt difficult-card__deco-button-helper"></div>
+        <div class="difficult-card__deco-button-two-alt difficult-card__deco-button-helper"></div>
+        <div class="difficult-card__deco-button-three-alt"></div>
+        <div class="difficult-card__deco-button-four-alt difficult-card__deco-button-helper"></div>
+      </div>
+      <button class="game-board__difficult-game-button-alt">
+        <h3>START PIESFUL AND REELAKSING GAYM (NO DETH I PROMIS)</h3>
+        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
+        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
+        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
+        <div class="difficult-card">
+          <text class="difficult-card__difficult-game">EZ MODE!!! YES AND VERYE HAPPIE SEE LOOK AT COOL ROOLZ:
+            <text class="difficult-card__game-rules">++++===============================================================++++</text>
+            <text class="difficult-card__game-rules">ROOL 1) ALEIN -BEET- SIZORZ!!!! <----- NISE!</text>
+            <text class="difficult-card__game-rules">ROOL 2) ALEIN -BEET- PAIPR!!!! <------- GUD TO KNO!!!</text>
+            <text class="difficult-card__game-rules">ALEIN -BEET- ..UH... ACCTUALY ITZ MOAR FUN IF SURPRIZ!</text>
+            <h6 class="difficult-card_game-rules">yool see heh heh</h6>
+            <h3 class="difficult-card__game-rules">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
+          </text>
+        </div>
+      </button>
+    </section>
     <div class="bottom-border hidden">
       <img class="bottom-border__player-icon" src="./assets/human-player.png">
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
       <button class="bottom-border__change-mode-button hidden">LETZ PLAI BEDDER GAYM CLIK HEER K?</button>
       <button class="bottom-border__play-fairly hidden">pssst...click here for a FAIR game... *smile*</button>
+      <text class="stop-that-three hidden">STOP DAT!!</text>
+      <text class="stop-that-four hidden">DONT TUCH THOEZ!</text>
     </div>
     <script type="text/javascript" src="./Player.js"></script>
     <script type="text/javascript" src="./Game.js"></script>
