--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       </div>
       <div class="help hidden">
         <text class="helpful-message-one hidden">agent yu ...</text>
-        <text class="helpful-message-two hidden">... the "alein" will always win and there's no way to exit this game mode ... so i would say to stop playing but i know you better than that ...</text>
-        <text class="helpful-message-three hidden">... you've always been so hard-headed ... but at least let me give you a fighting chance ...</text>
-        <text class="helpful-message-four hidden">... look for a button to make the game fair ... i'll have it ready for you soon ...</text>
-        <text class="helpful-message-five hidden">... keep playing for now, buy me some time ... i really think we can finally crack this thing ... just hang in there, and keep your eyes peeled ...</text>
+        <text class="helpful-message-two hidden">the "alein" will ALWAYS WIN and there is NO WAY to EXIT this game mode ... so i would say to STOP PLAYING but i know you better than that ...</text>
+        <text class="helpful-message-three hidden">you've always been so HARD-HEADED ... but at least let me give you a FIGHTING CHANCE ...</text>
+        <text class="helpful-message-four hidden">look for a BUTTON to make the game FAIR ... i'll have it ready for you soon ...</text>
+        <text class="helpful-message-five hidden">... keep playing for now, BUY ME SOME TIME ... i think we can FINALLY CRACK this thing ... just hang in there and keep your EYES PEELED ...</text>
       </div>
       <div class="hidden" id="difficultWinnerCard">
         <text class="winner-card-difficult__outcome-is">AND TEH WINNR IZ --</text>
