--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="body">
     <section class="cia-warning">
-      <img class="cia-warning__cia-logo" src="./assets/cia-warning.png">
+      <img class="cia-warning__cia-logo" src="./assets/cia-warning.png" alt="image of CIA logo">
       <text class="cia-warning__disclaimer">ACCESS GRANTED</text>
       <text class="cia-warning__disclaimer">Welcome, special agent Yu Yorselve
       <text class="cia-warning__disclaimer">The following webpage was seized by special operations branch WEBSAF on July 5th, 1997. Reports had surfaced of an intricate and mesmerizing website (id="BU-77") due to its apparent link with a string of disappearances in the Denver-Metro area of Colorado during that same year. Upon BU-77's seizure, WEBSAF agents reported that it had been masquerading as a harmless web application, providing its users with endless rounds of the highly intellectual and mentally stimulating game known colloquially as "Rock/Paper/Scissors". As such, you will find two "game modes" available to "play" on the main page. One of these appears to be harmless while the other...well, you'll see.</text>
@@ -25,8 +25,8 @@
       <button class="cia-warning__proceed-button">PROCEED?</button>
     </section>
     <div class="top-border hidden">
-      <img class="top-border__secret-alien-image" src="./assets/computer-player.png">
-      <img class="top-border__secret-alien-image-two" src="./assets/disguise.png">
+      <img class="top-border__secret-alien-image" src="./assets/computer-player.png" alt="image of what is definitely not an alien">
+      <img class="top-border__secret-alien-image-two" src="./assets/disguise.png" alt="image of a hat, mustache, and glasses as a poor disguise over aliens's face">
       <text class="top-border__secret-alien-name">NOT SEEKRIT ALEIN</text>
       <text class="top-border__secret-alien-win-count">WiNS: 0</text>
       <button class="top-border__change-mode-back hidden">NO LIK FARE GAYM! GO BAK NOW! CLIK HEER NOW!</button>
@@ -34,13 +34,13 @@
       <text class="stop-that-two hidden">U DOO ?!!?</text>
     </div>
     <section class="game-board hidden">
-      <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png">
+      <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png" alt="image of arrow pointing towards both of the game modes; the arrow pointing left says 'bad', the arrow pointing right says 'good', indicating that the alien wants you to choose the game mode on the right">
       <text class="game-board__choose-mode">CHOOZ 1
         <text class="game-board__bad-text">BAD</text>
         <text class="game-board__good-text">GHOOD</text>
       </text>
       <text class="game-board__click-here">CLIK HEER OR HEER!!!</text>
-      <button class="game-board__classic-game-button">
+      <button class="game-board__classic-game-button" alt="button for selecting the classic game mode (the game mode on the left)">
         <h3>STRT CLASIK GAYM</h3>
         <div class="classic-card">
           <text class="classic-card__classic-game">CLASIK GAYM
@@ -58,11 +58,11 @@
         <div class="difficult-card__deco-button-three"></div>
         <div class="difficult-card__deco-button-four difficult-card__deco-button-helper"></div>
       </div>
-      <button class="game-board__difficult-game-button">
+      <button class="game-board__difficult-game-button" alt="button for selecting the difficult game mode (the game mode on the right)">
         <h3>START PIESFUL AND REELAKSING GAYM (NO DETH I PROMIS)</h3>
-        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
-        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
-        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
+        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="image of an arrow pointing towards the right side game mode">
+        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="image of another arrow pointing towards the right side game mode">
+        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="image of yet another arrow pointing towards the right side game mode">
         <div class="difficult-card">
           <text class="difficult-card__difficult-game">EZ MODE!!! YES AND VERYE HAPPIE SEE LOOK AT COOL ROOLZ:
             <text class="difficult-card__game-rules">++++===============================================================++++</text>
@@ -77,9 +77,9 @@
     </section>
     <section class="game-board-classic hidden">
       <div class="" id="classicCard">
-        <img class="game-board-classic__rock-button" src="./assets/rock.png">
-        <img class="game-board-classic__paper-button" src="./assets/paypear.png">
-        <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png">
+        <img class="game-board-classic__rock-button" src="./assets/rock.png" alt="image of Dwayne 'The Rock' Johnson">
+        <img class="game-board-classic__paper-button" src="./assets/paypear.png" alt="image of the PAYDAY candybar logo, with the latter half covered by the image of a pear; thus, pay-pear">
+        <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png" alt="image of Cesar Romero (who played the Joker in the 1960's tv show 'Batman', and because his first name sounds like 'scissor')">
         <text class="game-board-classic__explanation-text">the actor's name is cesar romero...that's the joke...feel free to lol, now</text>
       </div>
       <div class="hidden" id="classicWinnerCard">
@@ -90,15 +90,15 @@
     </section>
     <section class="game-board-difficult hidden">
       <div class="" id="difficultCard">
-        <img class="game-board-difficult__rock-button" src="./assets/rock.png">
-        <img class="game-board-difficult__paper-button" src="./assets/paypear.png">
-        <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png">
-        <img class="game-board-difficult__rock-button-two hidden" src="./assets/rock.png">
-        <img class="game-board-difficult__paper-button-two hidden" src="./assets/paypear.png">
-        <img class="game-board-difficult__scissors-button-two hidden" src="./assets/scissors-romero.png">
-        <img class="game-board-difficult__wimpy-alien-button not-allowed" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
-        <img class="game-board-difficult__alien-button not-allowed" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
-        <img class="game-board-difficult__bigger-alien-button not-allowed" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">
+        <img class="game-board-difficult__rock-button" src="./assets/rock.png" alt="once again, an image of Dwayne 'The Rock' Johnson">
+        <img class="game-board-difficult__paper-button" src="./assets/paypear.png" alt="pay-pear image">
+        <img class="game-board-difficult__scissors-button" src="./assets/scissors-romero.png" alt="image of Cesar Romero">
+        <img class="game-board-difficult__rock-button-two hidden" src="./assets/rock.png" alt="another image of Dwayne 'The Rock' Johnson">
+        <img class="game-board-difficult__paper-button-two hidden" src="./assets/paypear.png" alt="another pay-pear image">
+        <img class="game-board-difficult__scissors-button-two hidden" src="./assets/scissors-romero.png" alt="another image of Cesar Romero">
+        <img class="game-board-difficult__wimpy-alien-button not-allowed" src="./assets/wimpy-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()" alt="image of a wimpy alien">
+        <img class="game-board-difficult__alien-button not-allowed" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()" alt="image of an alien">
+        <img class="game-board-difficult__bigger-alien-button not-allowed" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()" alt="image of a large alien">
         <text class="game-board-difficult__no-touchy not-allowed hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
       </div>
       <div class="help hidden">
@@ -116,13 +116,13 @@
     </section>
     <section class="game-board-fair hidden">
       <div class="" id="fairCard">
-        <img class="game-board-fair__rock-button" src="./assets/rock.png">
-        <img class="game-board-fair__paper-button" src="./assets/paypear.png">
-        <img class="game-board-fair__scissors-button" src="./assets/scissors-romero.png">
-        <img class="game-board-fair__wimpy-alien-button" src="./assets/wimpy-alien.png">
-        <img class="game-board-fair__alien-button" src="./assets/alien.png">
-        <img class="game-board-fair__bigger-alien-button" src="./assets/bigger-alien.png">
-        <img class="game-board-fair__secret-alien-button" src="./assets/secret-alien.png">
+        <img class="game-board-fair__rock-button" src="./assets/rock.png" alt="image of The Rock">
+        <img class="game-board-fair__paper-button" src="./assets/paypear.png" alt="image of pay-pear">
+        <img class="game-board-fair__scissors-button" src="./assets/scissors-romero.png" alt="image of Cesar Romero">
+        <img class="game-board-fair__wimpy-alien-button" src="./assets/wimpy-alien.png" alt="image of a wimpy alien">
+        <img class="game-board-fair__alien-button" src="./assets/alien.png" alt="image of an alien">
+        <img class="game-board-fair__bigger-alien-button" src="./assets/bigger-alien.png" alt="image of a large alien">
+        <img class="game-board-fair__secret-alien-button" src="./assets/secret-alien.png" alt="image of the alien you're playing against">
       </div>
       <div class="hidden" id="fairWinnerCard">
         <text class="winner-card-fair__outcome-is">AND TEH WINNR IZ --</text>
@@ -137,11 +137,11 @@
         <div class="difficult-card__deco-button-three-alt"></div>
         <div class="difficult-card__deco-button-four-alt difficult-card__deco-button-helper"></div>
       </div>
-      <button class="game-board__difficult-game-button-alt">
+      <button class="game-board__difficult-game-button-alt" alt="button that begins the difficult game mode (the game mode on the right)">
         <h3>START PIESFUL AND REELAKSING GAYM (NO DETH I PROMIS)</h3>
-        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="arrow_image_pointing_up_and_left_at_difficult_game_button">
-        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="arrow_image_pointing_down_at_difficult_game_button">
-        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="arrow_image_pointing_up_and_right_at_difficult_game_button">
+        <img class="difficult-card__arrow-one" src="./assets/arrow-one.png" alt="image of an arrow pointing towards the right side game mode">
+        <img class="difficult-card__arrow-two" src="./assets/arrow-two.png" alt="image of another arrow pointing towards the right side game mode">
+        <img class="difficult-card__arrow-three" src="./assets/arrow-three.png" alt="image of yet another arrow pointing towards the right side game mode">
         <div class="difficult-card">
           <text class="difficult-card__difficult-game">EZ MODE!!! YES AND VERYE HAPPIE SEE LOOK AT COOL ROOLZ:
             <text class="difficult-card__game-rules">++++===============================================================++++</text>
@@ -155,7 +155,7 @@
       </button>
     </section>
     <div class="bottom-border hidden">
-      <img class="bottom-border__player-icon" src="./assets/human-player.png">
+      <img class="bottom-border__player-icon" src="./assets/human-player.png" alt="image of a baby's face used as an avatar for the user">
       <text class="bottom-border__player-name">PYUNEE HOOMOHN</text>
       <text class="bottom-border__player-win-count">WiNZS: 0</text>
       <button class="bottom-border__change-mode-button hidden">LETZ PLAI BEDDER GAYM CLIK HEER K?</button>
