--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="" id="classicCard">
         <img class="game-board-classic__rock-button" src="./assets/rock.png" alt="image of Dwayne 'The Rock' Johnson">
         <img class="game-board-classic__paper-button" src="./assets/paypear.png" alt="image of the PAYDAY candybar logo, with the latter half covered by the image of a pear; thus, pay-pear">
-        <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png" alt="image of Cesar Romero (who played the Joker in the 1960's tv show 'Batman', and because his first name sounds like 'scissor')">
+        <img class="game-board-classic__scissors-button" src="./assets/scissors-romero.png" alt="image of Cesar Romero (who played the Joker in the 1960's tv show 'Batman') appearing here because his first name sounds like 'scissor')">
         <text class="game-board-classic__explanation-text">the actor's name is cesar romero...that's the joke...feel free to lol, now</text>
       </div>
       <div class="hidden" id="classicWinnerCard">
