Add fair game rules

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
         <img class="game-board-fair__alien-button" src="./assets/alien.png" alt="image of an alien">
         <img class="game-board-fair__bigger-alien-button" src="./assets/bigger-alien.png" alt="image of a large alien">
         <img class="game-board-fair__secret-alien-button" src="./assets/secret-alien.png" alt="image of the alien you're playing against">
+        <text class="fair-game-rules__paper">will defeat:</text>
+        <text class="fair-game-rules__paper-two">ROCK - ALIEN - WIMPY ALIEN</text>
+        <text class="fair-game-rules__rock">will defeat:</text>
+        <text class="fair-game-rules__rock-two">SCISSORS - BIGGER ALIEN - WIMPY ALIEN</text>
+        <text class="fair-game-rules__scissors">will defeat:</text>
+        <text class="fair-game-rules__scissors-two">PAPER - SECRET ALIEN - ALIEN</text>
+        <text class="fair-game-rules__secret-alien">will defeat:</text>
+        <text class="fair-game-rules__secret-alien-two">PAPER - BIGGER ALIEN - ROCK</text>
+        <text class="fair-game-rules__bigger-alien">will defeat:</text>
+        <text class="fair-game-rules__bigger-alien-two">PAPER - ALIEN - SCISSORS</text>
+        <text class="fair-game-rules__alien">will defeat:</text>
+        <text class="fair-game-rules__alien-two">ROCK - WIMPY ALIEN - SECRET ALIEN</text>
+        <text class="fair-game-rules__wimpy-alien">will defeat:</text>
+        <text class="fair-game-rules__wimpy-alien-two">BIGGER ALIEN - SCISSORS - SECRET ALIEN</text>
       </div>
       <div class="hidden" id="fairWinnerCard">
         <text class="winner-card-fair__outcome-is">AND TEH WINNR IZ --</text>
