Add plain english text to game mode select screen

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             <text class="classic-card__game-rules">ROOL 2) SIZORZ -BEET- PAIPR</text>
             <text class="classic-card__game-rules">ROOL 3) PAIPR -BEET- ... ??? I FURGIT NOW SRY</text>
             <text class="classic-card__game-rules">LETZ PLAI HURREE</text>
+            <div class="classic-card-two">
+              <text class="classic-card__game-rules-two">CLASSIC GAME MODE</text>
+              <text class="classic-card__game-rules-two">++++================++++</text>
+              <text class="classic-card__game-rules-two">* ROCK beats SCISSORS *</text>
+              <text class="classic-card__game-rules-two">* SCISSORS beats PAPER *</text>
+              <text class="classic-card__game-rules-two">* PAPER beats ROCK *</text>
+            </div>
           </text>
         </div>
       </button>
@@ -71,6 +78,13 @@
             <text class="difficult-card__game-rules">ALEIN -BEET- ..UH... ACCTUALY ITZ MOAR FUN IF SURPRIZ!</text>
             <h6 class="difficult-card_game-rules">yool see heh heh</h6>
             <h3 class="difficult-card__game-rules">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
+            <div class="difficult-card-two">
+              <text class="difficult-card__game-rules-two">CHALLENGING GAME MODE</text>
+              <text class="difficult-card__game-rules-two">++++=====================================================++++</text>
+              <text class="difficult-card__game-rules-two">* ALIEN beats SCISSORS!!!! <----- NICE!</text>
+              <text class="difficult-card__game-rules-two">* ALIEN beats PAPER!!!! <------- GOOD TO KNOW!!!</text>
+              <text class="difficult-card__game-rules-two">* ALIEN beats ROCK and ..uh... actually it's more fun if surprise!</text>
+            </div>
           </text>
         </div>
       </button>
