Add plain english text translation for difficult card

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <button class="top-border__change-mode-back hidden">NO LIK FARE GAYM! GO BAK NOW! CLIK HEER NOW!</button>
       <text class="stop-that hidden">WUT DID</text>
       <text class="stop-that-two hidden">U DOO ?!!?</text>
+      <text class="cia-notes" id="noteOne">OFFICIAL NOTE: The GUI of BU-77 isn't user-friendly (although WEBSAF analysts believe this "limitation" was not due to design, but rather to a lack of talent for good, human-centric design; which is odd because whoever the developers of BU-77 are, they're DEFINITELY HUMAN). In any case, here's all you need to know to get started:</text>
+      <text class="cia-notes" id="noteTwo">This smaller button on the left (located below) takes you to a 'classic mode' (aka, vanilla version) of rock-paper-scissors.</text>
+      <text class="cia-notes" id="noteThree">This larger button on the right (located above) is the problematic one. Although the button itself is still FULLY FUNCTIONAL, this is for RESEARCH and DATA TRACKING purposes ONLY; for your safety, and the safety of the agency, selection of this "game mode" is STRICTLY PROHIBITED at this time. To be clear, the button is DEFINITELY 100% CLICKABLE AND YOU CAN TOTALLY SELECT IT (but also don't do that).</text>
     </div>
     <section class="game-board hidden">
       <img class="game-board__choose-one-arrows" src="./assets/arrows-icon.png" alt="image of arrow pointing towards both of the game modes; the arrow pointing left says 'bad', the arrow pointing right says 'good', indicating that the alien wants you to choose the game mode on the right">
@@ -45,16 +48,18 @@
         <div class="classic-card">
           <text class="classic-card__classic-game">CLASIK GAYM
             <text class="classic-card__game-rules">++++==========================++++</text>
-            <text class="classic-card__game-rules">ROOL 1) ROK -BEET- SIZORZ</text>
-            <text class="classic-card__game-rules">ROOL 2) SIZORZ -BEET- PAIPR</text>
-            <text class="classic-card__game-rules">ROOL 3) PAIPR -BEET- ... ??? I FURGIT NOW SRY</text>
+            <text class="classic-card__game-rules">ROK -BEET- SIZORZ</text>
+            <text class="classic-card__game-rules">SIZORZ -BEET- PAIPR</text>
+            <text class="classic-card__game-rules">PAIPR -BEET- ...?? I FURGIT NOW SRY</text>
             <text class="classic-card__game-rules">LETZ PLAI HURREE</text>
             <div class="classic-card-two">
               <text class="classic-card__game-rules-two">CLASSIC GAME MODE</text>
               <text class="classic-card__game-rules-two">++++================++++</text>
               <text class="classic-card__game-rules-two">* ROCK beats SCISSORS *</text>
               <text class="classic-card__game-rules-two">* SCISSORS beats PAPER *</text>
-              <text class="classic-card__game-rules-two">* PAPER beats ROCK *</text>
+              <text class="classic-card__game-rules-two">* PAPER beats ...  *</text>
+              <text class="classic-card__game-rules-two">UM ... I forget now sorry</text>
+              <text class="classic-card__game-rules-two">let's play </text>
             </div>
           </text>
         </div>
@@ -80,10 +85,12 @@
             <h3 class="difficult-card__game-rules">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
             <div class="difficult-card-two">
               <text class="difficult-card__game-rules-two">CHALLENGING GAME MODE</text>
-              <text class="difficult-card__game-rules-two">++++=====================================================++++</text>
+              <text class="difficult-card__game-rules-two">++++===============================++++</text>
               <text class="difficult-card__game-rules-two">* ALIEN beats SCISSORS!!!! <----- NICE!</text>
               <text class="difficult-card__game-rules-two">* ALIEN beats PAPER!!!! <------- GOOD TO KNOW!!!</text>
-              <text class="difficult-card__game-rules-two">* ALIEN beats ROCK and ..uh... actually it's more fun if surprise!</text>
+              <text class="difficult-card__game-rules-two">ALIEN beats ROCK and ..uh...</text>
+              <text class="difficult-card__game-rules-two">actually it's more fun if surprise!</text>
+              <h3 class="difficult-card__game-rules-two">**This game mode more fun trust me**</h3>
             </div>
           </text>
         </div>
